<resources>
    <string name="app_name">Eco Car Wash</string>
    <string name="action_settings">Settings</string>

    <!-- Default string -->
    <string name="Agregar">Agregar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Enviar">Enviar</string>
    <string name="Cerrar">Cerrar Sesión</string>
    <string name="Ok">OK</string>
    <string name="Borrar">Borrar</string>
    <string name="Reasignar">Reasignar</string>

    <!-- Home Tab -->
    <string name="Home_Tab1">Tiempos</string>
    <string name="Home_Tab2">Activos</string>
    <string name="Home_Tab3">Registro</string>

    <!-- Fragment Home -->
    <string name="Fragment_Home_Timer_InfoText">Para crear un cronometro, selecciona el botón en la esquina inferior derecha. \n \n La lista se resetea todos los días a media noche.</string>

    <!-- Fragment People -->
    <string name="Fragment_Home_People_Card1">Registro de Secadores</string>
    <string name="Fragment_Home_People_Card2">Secadores Activos</string>

    <!-- Card_Chronometer -->
    <string name="Card_Chronometer_Enter">Entrada</string>
    <string name="Card_Chronometer_Dry">Secado</string>
    <string name="Card_Chronometer_NamePlaceholder">Esperando Asignación</string>
    <string name="Card_Chronometer_ItemPlaceholder"> </string>

    <!-- Card_DayReport -->
    <string name="Card_DayReport_HeaderName">Empleado</string>
    <string name="Card_DayReport_HeaderLicense">Placas</string>
    <string name="Card_DayReport_HeaderHour">Hora</string>
    <string name="Card_DayReport_HeaderTotal">Total</string>
    <string name="Card_DayReport_HeaderDryTime">Secado</string>
    <string name="Card_DayReport_DatePlaceholder">Lunes 1 de Enero 2018</string>
    <string name="Card_DayReport_NamePlaceholder">Luis G.</string>
    <string name="Card_DayReport_LicensePlaceholder">ABC-123</string>
    <string name="Card_DayReport_TimePlaceholder">00:00:00</string>

    <!-- Dialog Create Car -->
    <string name="Dialog_CreateCar_Title">Agregar Auto</string>
    <string name="Dialog_CreateCar_Licence">Placas del Auto</string>
    <string name="Dialog_CreateCar_Color">Color</string>
    <string name="Dialog_CreateCar_Package">Paquete</string>
    <string name="Dialog_CreateCar_Size">Tamaño</string>
    <string name="Dialog_CreateCar_InitialDryer">Pre-Asignar Secador (Opcional)</string>

    <!-- Dialog Create CarDryer -->
    <string name="Dialog_CreateCarDryer_Title">Asignar Secador</string>
    <string name="Dialog_CreateCarDryer_Dryer">Secador</string>
    <string name="Dialog_CreateCarDryer_Placeholder">Nombre Apellido</string>

    <!-- Dialog Create Dryer -->
    <string name="Dialog_CreateDryer_Title">Crear Secador</string>
    <string name="Dialog_CreateDryer_Name">Nombres</string>
    <string name="Dialog_CreateDryer_LastNameFather">Apellido Paterno</string>
    <string name="Dialog_CreateDryer_LastNameMother">Apellido Materno</string>
    <string name="Dialog_CreateDryer_EntryDate">Fecha de Ingreso</string>

    <!-- Dialog Info Dryer -->
    <string name="Dialog_InfoDryer_Title">Información del Secador</string>
    <string name="Dialog_InfoDryer_Name">Nombre Completo</string>
    <string name="Dialog_InfoDryer_EntryDate">Fecha de Ingreso</string>
    <string name="Dialog_InfoDryer_CarWashed">Automoviles Lavados</string>
    <string name="Dialog_InfoDryer_PlaceholderName">Nombre Apellido</string>
    <string name="Dialog_InfoDryer_PlaceholderEntryDate">Enero 1, 2018</string>
    <string name="Dialog_InfoDryer_PlaceholderCarWashed">0</string>

    <!-- Dialog Send Report Clocks -->
    <string name="Dialog_SendReportClocks_Title">Reporte de Lavados</string>
    <string name="Dialog_SendReportClocks_StartDate">Fecha de Inicio</string>
    <string name="Dialog_SendReportClocks_EndDate">Fecha de Termino</string>

    <!-- Dialog Send Report Dryers -->
    <string name="Dialog_SendReportDryers_Title">Reporte de Secadores</string>
    <string name="Dialog_SendReportDryers_StartDate">Fecha de Inicio</string>
    <string name="Dialog_SendReportDryers_EndDate">Fecha de Termino</string>

    <!-- Dialog Logout -->
    <string name="Dialog_Logout_Title">Cierre de Sesión</string>
    <string name="Dialog_Logout_Message">¿Deseas cerrar sesión?</string>

    <!-- Arrays -->
    <string-array name="Dialog_CreateCar_ToggleArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="Dialog_CreateCar_SpinnerArray">
        <item>Amarillo</item>
        <item>Azul</item>
        <item>Blanco</item>
        <item>Cafe</item>
        <item>Gris</item>
        <item>Negro</item>
        <item>Plateado</item>
        <item>Rojo</item>
        <item>Verde</item>
        <item>Otro</item>
    </string-array>
    <string name="title_activity_login">Inicio de Sesión</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
