<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorAccent2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:text="@string/Dialog_InfoDryer_Title"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorAccentLight2"
            android:textSize="16sp"
            android:text="@string/Dialog_InfoDryer_Name"/>

        <TextView
            android:id="@+id/Dialog_InfoDryer_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:lineSpacingExtra="3sp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/Dialog_InfoDryer_PlaceholderName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorAccentLight2"
            android:textSize="16sp"
            android:text="@string/Dialog_InfoDryer_EntryDate"/>

        <TextView
            android:id="@+id/Dialog_InfoDryer_Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:lineSpacingExtra="3sp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/Dialog_InfoDryer_PlaceholderEntryDate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorAccentLight2"
            android:textSize="16sp"
            android:text="@string/Dialog_InfoDryer_CarWashed"/>

        <TextView
            android:id="@+id/Dialog_InfoDryer_WasherCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3sp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/Dialog_InfoDryer_PlaceholderCarWashed"/>
    </LinearLayout>

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/grayLight"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left">
            <Button
                android:id="@+id/Dialog_InfoDryer_Delete"
                style="@style/BorderlessButton"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/Borrar"
                android:textAllCaps="true"
                android:textColor="@color/colorAlert" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right">
            <Button
                android:id="@+id/Dialog_InfoDryer_Accept"
                style="@style/BorderlessButton"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/Ok"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent2" />
        </LinearLayout>




    </LinearLayout>


</LinearLayout>