<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/Dialog_Logout_Title"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/Dryer_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grayDark"
            android:layout_marginBottom="10dp"
            android:textSize="24sp"
            android:text="@string/Dialog_Logout_Message"/>
    </LinearLayout>

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/grayLight"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left">
            <Button
                android:id="@+id/Dialog_Logout_Close"
                style="@style/BorderlessButton"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/Cerrar"
                android:textAllCaps="true"
                android:textColor="@color/colorAlert" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end">
            <Button
                android:id="@+id/Dialog_Logout_Cancel"
                style="@style/BorderlessButton"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/Cancelar"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent2" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>