<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="@color/colorPaper">

        <TextView
            android:id="@+id/Card_DayReport_ColumnName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/Card_DayReport_NamePlaceholder"/>

        <TextView
            android:id="@+id/Card_DayReport_ColumnLicense"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/Card_DayReport_LicensePlaceholder"/>

        <TextView
            android:id="@+id/Card_DayReport_ColumnClock1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/Card_DayReport_TimePlaceholder"/>

        <TextView
            android:id="@+id/Card_DayReport_ColumnClock2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/Card_DayReport_TimePlaceholder"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grayLight"/>

</LinearLayout>