<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorAccent3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:text="@string/Dialog_SendReportDryers_Title"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="12dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_people"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/colorAccent2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorAccent3"
            android:textSize="16sp"
            android:text="@string/Dialog_SendReportDryers_StartDate"/>

        <RelativeLayout
            android:id="@+id/Dialog_SendReport_DateStart"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/Dialog_SendReport_TextStart"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true">
                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_date"
                    android:backgroundTint="@color/colorAccent3" />
            </LinearLayout>

            <View
                android:layout_height="2dp"
                android:layout_width="match_parent"
                android:layout_alignBottom="@id/Dialog_SendReport_TextStart"
                android:background="@color/gray"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorAccent3"
            android:textSize="16sp"
            android:text="@string/Dialog_SendReportDryers_EndDate"/>

        <RelativeLayout
            android:id="@+id/Dialog_SendReport_DateEnd"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/Dialog_SendReport_TextEnd"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true">
                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_date"
                    android:backgroundTint="@color/colorAccent3" />
            </LinearLayout>

            <View
                android:layout_height="2dp"
                android:layout_width="match_parent"
                android:layout_alignBottom="@id/Dialog_SendReport_TextEnd"
                android:background="@color/gray"/>
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/grayLight"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Button_Quit"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textAllCaps="true"
            android:text="@string/Cancelar"
            style="@style/BorderlessButton"/>

        <Button
            android:id="@+id/Button_Add"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textAllCaps="true"
            android:text="@string/Enviar"
            android:enabled="false"
            style="@style/BorderlessButton"/>
    </LinearLayout>
</LinearLayout>